--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -153,7 +153,7 @@ activities:
 - acronym: CSF ’22
   desc: 35th IEEE Computer Security Foundations Symposium
   role: Program Committee
-  URL: 
+  URL: https://www.ieee-security.org/TC/CSF2022/
   
 - acronym: POPL ’22
   desc: 49th ACM SIGPLAN Symposium on Principles of Programming Languages
