--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -7,7 +7,7 @@ place: Amazon Web Services
 
 links:
 - name: dblp
-  url: http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael
+  url: https://dblp.org/pid/76/5819.html
 - name: Google Scholar
   url: https://scholar.google.com/citations?user=fOxqIXYAAAAJ
 - name: GitHub
