--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -145,6 +145,11 @@ references:
   web: https://research.fb.com/people/berdine-josh/
 
 activities:
+- acronym: CAV ’23
+  desc: 35th International Conference on Computer Aided Verification
+  role: Program Committee
+  URL: http://i-cav.org/2023/
+  
 - acronym: CSF ’23
   desc: 36th IEEE Computer Security Foundations Symposium
   role: Program Committee
