--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -145,6 +145,11 @@ references:
   web: https://research.fb.com/people/berdine-josh/
 
 activities:
+- acronym: SAS ’23
+  desc: 30th Static Analysis Symposium
+  role: Program Committee
+  URL: https://conf.researchr.org/home/sas-2023
+  
 - acronym: CAV ’23
   desc: 35th International Conference on Computer Aided Verification
   role: Program Committee
