--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -422,6 +422,16 @@ activities:
 
 publications:
 
+- title: Compositional Taint Analysis for Enforcing Security Policies at Scale
+  authors: Subarno Banerjee, Siwei Cui, Michael Emmi, Antonio Filieri, Liana Hadarean, Peixuan Li, Linghui Luo, Goran Piskachev, Nicolás Rosner, Aritra Sengupta, Omer Tripp, Jingbo Wang
+  book: 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering
+  acronym: ESEC/FSE ’23
+  pages:
+  publisher: ACM
+  year: 2023
+  doi: https://doi.org/10.1145/3611643.3613889
+  pdf: 
+
 - title: "RAPID: Checking API Usage for the Cloud in the Cloud"
   authors: Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser
   book: 29th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering
