--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -145,6 +145,11 @@ references:
   web: https://research.fb.com/people/berdine-josh/
 
 activities:  
+- acronym: POPL ’25
+  desc: 52nd ACM SIGPLAN Symposium on Principles of Programming Languages
+  role: Program Committee
+  URL: https://popl24.sigplan.org
+  
 - acronym: PLDI ’24
   desc: 45th ACM SIGPLAN Conference on Programming Language Design and Implementation
   role: Program Committee
